--- a/3d.html
+++ b/3d.html
@@ -70,7 +70,7 @@
     </section>
 
     <div class="bottom-nav">
-        <a href="Sitepro.html" class="btn-outline">← Retour à l'accueil</a>
+        <a href="index.html" class="btn-outline">← Retour à l'accueil</a>
     </div>
 
     <div id="lightbox-overlay">
@@ -156,4 +156,5 @@
     </script>
 
 </body>
+
 </html>
