--- a/motion.html
+++ b/motion.html
@@ -71,7 +71,7 @@
     </section>
 
     <div class="bottom-nav">
-        <a href="Sitepro.html" class="btn-outline">← Retour à l'accueil</a>
+        <a href="index.html" class="btn-outline">← Retour à l'accueil</a>
     </div>
 
     <footer id="contact" class="footer">
@@ -114,4 +114,5 @@
     </script>
 
 </body>
+
 </html>
