--- a/Web.html
+++ b/Web.html
@@ -71,7 +71,7 @@
     </section>
 
     <div class="bottom-nav">
-        <a href="Sitepro.html" class="btn-outline">← Retour à l'accueil</a>
+        <a href="index.html" class="btn-outline">← Retour à l'accueil</a>
     </div>
 
     <div id="lightbox-overlay">
@@ -146,4 +146,5 @@
     </script>
 
 </body>
+
 </html>
