--- a/motion.html
+++ b/motion.html
@@ -48,7 +48,7 @@
 
                 <div class="project-item">
                     <div class="screenshot-container">
-                        <img src="montage3.png" alt="Rendu final">
+                        <img src="Montage3.png" alt="Rendu final">
                     </div>
                     <div class="info">
                         <h3>Colorimétrie</h3>
@@ -116,3 +116,4 @@
 </body>
 
 </html>
+
