--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
                 </a>
 
-                <a href="Web.html" class="project-item project-link">
+                <a href="web.html" class="project-item project-link">
     
                     <div class="img-container">
                         <img src="logo3.jpg" alt="Logo HTML CSS">
@@ -88,4 +88,5 @@
     </footer>
 </body>
 </html>
+
 
